--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,5 @@
 *{
     margin: 0;
-    
 }
 nav{
     display: flex;
@@ -9,6 +8,31 @@ nav{
 }
 nav ul{
     display: flex;
-    
+}
+header{
+    justify-content: center;
+    margin-left: 40% ;
+    margin-top: 200px;
+    text-align: justify;
+}
+input{
+    color: white;
+    background-color: #FF900E;
+}
+img{
+    justify-content: flex-start;
+}
+.main-content{
+    display: flex;
 
+}
+.col{
+    color: #FF900E;
+}
+.main-content-1{
+    display: flex;
+}
+.icon-info{
+    display: flex;
+    justify-content: space-between;
 }
