--- a/style/style.css
+++ b/style/style.css
@@ -8,21 +8,59 @@ nav{
 }
 nav ul{
     display: flex;
+    
 }
-header{
-    justify-content: center;
-    margin-left: 40% ;
-    margin-top: 200px;
-    text-align: justify;
+nav li{
+    list-style: none;
+    margin-left: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 600px;
+    
 }
-input{
+.header-1{
+    text-align: center;
+    margin-left: 10% ;
+    margin-top: 250px;
+}
+.front-1{
+    font-weight: 9 00px;
+}
+.btn-primary{
+    background: #FF900E;
+    width: 120px;
+    height: 44px;
+    border-radius: 6px;
     color: white;
-    background-color: #FF900E;
+    font-size: 15px;
+    font-weight: 600;
+    border: 0;
 }
-img{
-    justify-content: flex-start;
+.btn-secondary{
+    background: #FF900E;
+    width: 180px;
+    height: 64px;
+    border-radius: 6px;
+    color: white;
+    font-size: 15px;
+    font-weight: 600;
+    border: 0;
+}
+
+
+.png-1{
+    margin-left: 120px;
+    padding: 15px;
+    height: 100%;
+    width: 85%;
+    justify-content: left;
+}
+.main-1{
+    margin: 60px;
+    padding: 20px;
+    text-align: center;
 }
 .main-content{
+    padding: 20px;
     display: flex;
 
 }
@@ -30,9 +68,78 @@ img{
     color: #FF900E;
 }
 .main-content-1{
+    margin-left: 70px;
+    padding: 20px;
     display: flex;
 }
+.text-decor{
+    padding: 20px;
+    box-sizing: border-box;
+    
+}
+.text-bold{
+    font-weight: 600px;
+}
+.img-3{
+    height: 750px;
+    width: 720px;
+}
+
+
+.header-2{
+   
+    margin-left: 4% ;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 40px; 
+}
+
 .icon-info{
     display: flex;
-    justify-content: space-between;
+    gap: 20px;
+    justify-content: space-around;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.box-icon{
+    background: #e9e5e5;
+    box-shadow: 0px 6px 50px rgba rgb(215, 207, 207)
+    border-radius: 5px;
+    padding: 30px;
+}
+.icon{
+    margin-left: 40px;
+      
+}
+.title{
+    font-size: 45px;
+    font-weight: 100;
+    padding: 10px;
+
+}
+.title-1{
+    font-size: 20px;
+}
+
+
+
+.header-3{
+   
+    margin-left: 0% ;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 20px;
+    text-align: center;
+    
+}
+
+.copyright{
+    margin-left: 40% ;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 20px;
+    box-shadow: rgb(red, green, blue);
+    
+
 }
