--- a/style/style.css
+++ b/style/style.css
@@ -38,10 +38,10 @@ nav li{
 .btn-secondary{
     background: #FF900E;
     width: 180px;
-    height: 64px;
+    height: 110px;
     border-radius: 6px;
     color: white;
-    font-size: 15px;
+    font-size: 22px;
     font-weight: 600;
     border: 0;
 }
@@ -62,23 +62,46 @@ nav li{
 .main-content{
     padding: 20px;
     display: flex;
+    margin-left: 100px;
 
 }
+
 .col{
     color: #FF900E;
 }
 .main-content-1{
-    margin-left: 70px;
-    padding: 20px;
+    margin-left: 120px;
+    padding: 0px;
     display: flex;
+    gap: 54px;
+
 }
 .text-decor{
+    padding: 0px;
+    box-sizing: border-box;
+    
+}
+
+.sub-text-decor{
     padding: 20px;
     box-sizing: border-box;
     
 }
+
 .text-bold{
     font-weight: 600px;
+}
+.sub-text{
+    margin-top: 40px;
+    
+}
+.sub-text-1{
+    margin-top: 10px;
+
+}
+.sub{
+    
+
 }
 .img-3{
     height: 750px;
@@ -87,8 +110,7 @@ nav li{
 
 
 .header-2{
-   
-    margin-left: 4% ;
+    margin-left: 120px;
     margin-top: 50px;
     margin-bottom: 50px;
     padding: 40px; 
@@ -100,6 +122,7 @@ nav li{
     justify-content: space-around;
     margin-top: 50px;
     margin-bottom: 50px;
+    margin-left: 100px;
 }
 
 .box-icon{
@@ -133,6 +156,13 @@ nav li{
     text-align: center;
     
 }
+.container .btn-secondary{
+    position: absolute;
+    top: 2650px;
+    left: 32%;
+    transform: translate(50%, -50%);
+}
+
 
 .copyright{
     margin-left: 40% ;
