--- a/style/style.css
+++ b/style/style.css
@@ -20,6 +20,77 @@ nav li{
     font-weight: 600px;
     
 }
+
+/* responsive */
+
+nav li a{
+    text-decoration: none;
+    font-weight: 300;
+    color: #413333;
+}
+
+ 
+.checkbtn{
+    font-size: 30px;
+    color: wheat;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+#check{
+    display: none;
+
+}
+@media (max-width: 952px){
+    label.logo{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+    nav ul li a{
+        font-size: 16px;
+    }
+}
+@media (max-width: 958px){
+    .checkbtn{
+        display: block;
+    }
+    nav ul li a{
+        font-size: 16px;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #ded8ac;
+        top: 80px;
+        left: 0;
+        text-align: center;
+        transition: all 0.5s;
+    }
+    nav ul {
+        display: block;
+        margin: 5px 0;
+        line-height: 30px;
+    }
+    nav ul li{
+        display: block;
+        margin: 5px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    a:hover, a.active{
+        background: none;
+        color: #0082e6;
+    }
+    #check:checked ~ul{
+        left: 0;
+    }
+}
+
 .header-1{
     text-align: center;
     margin-left: 10% ;
@@ -41,7 +112,7 @@ nav li{
 .btn-secondary{
     background: #FF900E;
     width: 180px;
-    height: 110px;
+    height: 120px;
     border-radius: 6px;
     color: white;
     font-size: 22px;
@@ -118,6 +189,7 @@ nav li{
     margin-bottom: 50px;
     padding: 40px; 
 }
+/* Awards Project */
 
 .icon-info{
     display: flex;
@@ -134,6 +206,12 @@ nav li{
     border-radius: 5px;
     padding: 30px;
 }
+.box-icon:hover{
+    background: #ff3535;
+    color: #ffffff;
+    transition: 0.9s;
+}
+
 .icon{
     margin-left: 40px;
       
@@ -161,7 +239,7 @@ nav li{
 }
 .container .btn-secondary{
     position: absolute;
-    top: 2650px;
+    top: 2580px;
     left: 32%;
     transform: translate(50%, -50%);
 }
